tests/cases/compiler-development/artifact/errors/diagnostic-invalid-return.diagnostic
diagnostic error code=T0001 family=type message="type mismatch: expected i64, got bool" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-invalid-return.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-invalid-return.ari" bytes=36
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-invalid-return.ari" line=2 column=10 end_line=2 end_column=14 byte_start=28 byte_end=32 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-invalid-return.ari:2:10\n   |\n 2 |   return true;\n   |          ^^^^"
